--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "fillets-ng-data-1.0.0.tar.gz": 66c5d9d9b3e8bf5159eb82efc34fcbe4c45c258d
+  fillets-ng-data-1.0.1.tar.gz: c13e1d1d4416e697dda4c52aebd076924a93ae42
